[tool.poetry]
name = "tjwb"
version = "3.1.0"
description = "Python library for reservoir water balance calculations."
authors = ["Duy Nguyen <duynguyen02.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/duynguyen02/tjwb"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

